# msgrpc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api.thrift  demo_api_declare.h  demo_api_define.cpp  demo_service.interface  demo_service_idl.h  demo_service_interface.h  demo_service_trivial.cpp.cpp  main.cpp
api/: service_api_declare.h  service_api_define.h
demo/: demo_api_define.cpp  demo_service.interface
demo_services/: CMakeLists.txt
demo_services/service_x/: CMakeLists.txt  service_x_main.cpp
demo_services/service_x/include/api/: service_y.api  y_api_interface_declare.h
demo_services/service_x/include/api/export/: service_x.interface
demo_services/service_x/include/api/service_x/: service_x.api
demo_services/service_x/include/api/service_y/: service_y.api  y_api_struct_declare.h
demo_services/service_x/include/api/service_z/: service_z.api  z_api_interface_declare.h  z_api_struct_declare.h
demo_services/service_x/include/service_discovery/: service_version_filter.h  service_y_resolver.h
demo_services/service_x/include/service_resolvers/: service_y_resolver.h  service_z_resolver.h
demo_services/service_x/include/test_util/: test_runner.h
demo_services/service_x/src/: service_x_main.cpp
demo_services/service_x/src/api/: y_api_interface_stub_define.cpp  y_api_struct_define.cpp
demo_services/service_x/src/api/service_y/: y_api_interface_stub_define.cpp
demo_services/service_x/src/service_discovery/: service_version_filter.cpp  service_y_resolver.cpp  service_z_resolver.cpp
demo_services/service_x/src/service_resolvers/: service_y_resolver.cpp  service_z_resolver.cpp
demo_services/service_x/src/test_util/: test_runner.cpp
demo_services/service_z/: CMakeLists.txt  service_z_main.cpp
demo_services/service_z/api/export/: service_z.interface
demo_services/service_z/include/api/: z_api_interface_declare.h
demo_services/service_z/include/api/export/: service_z.interface
demo_services/service_z/include/api/service_k/: k_api_interface_declare.h  k_api_struct_declare.h  service_k.api
demo_services/service_z/include/api/service_z/: service_z.api
demo_services/service_z/src/: service_z_main.cpp
demo_services/service_z/src/api/: z_api_interface_impl_define.cpp  z_api_struct_define.cpp
demo_services/service_z/src/api/service_k/: k_api_interface_stub_define.cpp  k_api_struct_define.cpp
demo_services/service_z/src/api/service_z/: z_api_interface_impl_define.cpp
gen1/: Petstore.cpp  Petstore.h  Petstore_server.skeleton.cpp  api_constants.cpp  api_constants.h  api_types.cpp  api_types.h
msgrpc/: CMakeLists.txt
msgrpc/adapter_example/core/adapter/: simple_logger.h  simple_timer_adapter.h  udp_msg_channel.h  zk_service_register.cpp  zk_service_register.h
msgrpc/adapter_example/details/: UdpChannel.h  msgrpc_test.h  msgrpc_test_loop.h  set_timer_handler.h  test_constants.h
msgrpc/demo/: demo_api_declare.h  demo_api_define.cpp  demo_api_interface_declare.h  demo_api_interface_define.cpp  demo_api_interface_impl_define.cpp  demo_api_interface_stub_define.cpp  demo_api_struct_declare.h  demo_api_struct_define.cpp  demo_service.api  demo_service.interface
msgrpc/include/msgrpc/api/: api_interface_declare.h  api_interface_impl_define.h  api_interface_stub_define.h  api_struct_declare.h  api_struct_define.h  service_api_interface_declare.h  service_api_struct_declare.h  service_api_struct_define.h
msgrpc/include/msgrpc/core/: typedefs.h
msgrpc/include/msgrpc/core/adapter/: adapter_base.h  config.h  logger.h  msg_channel.h  service_register.h  service_resolver.h  timer_adapter.h
msgrpc/include/msgrpc/core/cell/: cell.h  cell_base.h  derived_action.h  derived_async_cell.h  derived_cell.h  dummy_place_holder.h  rpc_context.h  rsp_cell_base.h  timeout_cell.h  updatable.h
msgrpc/include/msgrpc/core/components/: req_msg_handler.h  rpc_timeout_handler.h  rsp_dispatcher.h  rsp_msg_handler.h
msgrpc/include/msgrpc/core/iface_impl/: iface_impl_base.h  iface_impl_base_t.h  iface_repository.h
msgrpc/include/msgrpc/core/iface_stub/: iface_stub_base.h
msgrpc/include/msgrpc/core/msg/: msg_sender.h
msgrpc/include/msgrpc/core/msg/msg_handlers/: main_queue_task_handler.h  msg_handler.h  msg_handler_mgr.h  req_msg_handler.h  rsp_msg_handler.h
msgrpc/include/msgrpc/core/schedule/: task_run_on_main_queue.h
msgrpc/include/msgrpc/core/service_discovery/: combined_resolver.h  default_service_resolver.h  named_sr_listener.h  resolver_macros.h  service_filter.h  service_resolver.h  service_resolvers.h
msgrpc/include/msgrpc/core/service_interaction/: si_base.h
msgrpc/include/msgrpc/thrift/: thrift_codec.h  thrift_struct_common.h  thrift_struct_declare.h
msgrpc/include/msgrpc/thrift_struct/: thrift_struct_common.h  thrift_struct_define.h
msgrpc/include/msgrpc/util/: instances_collector.h  line_var_macro.h  singleton.h  type_traits.h
msgrpc/src/msgrpc/core/: rpc_sequence_id.cpp
msgrpc/src/msgrpc/core/adapter/: config.cpp
msgrpc/src/msgrpc/core/cell/: dummy_place_holder.cpp  rsp_cell_base.cpp
msgrpc/src/msgrpc/core/components/: req_msg_handler.cpp  rpc_timeout_handler.cpp  rsp_msg_handler.cpp
msgrpc/src/msgrpc/core/iface_impl/: iface_repository.cpp
msgrpc/src/msgrpc/core/iface_stub/: iface_stub_base.cpp
msgrpc/src/msgrpc/core/msg/: msg_sender.cpp
msgrpc/src/msgrpc/core/msg/components/: req_msg_handler.cpp  rsp_msg_handler.cpp
msgrpc/src/msgrpc/core/msg/msg_handlers/: main_queue_task_handler.cpp  msg_handler.cpp  msg_handler_mgr.cpp  rpc_timeout_handler.cpp  rsp_msg_handler.cpp
msgrpc/src/msgrpc/core/schedule/: task_run_on_main_queue.cpp
msgrpc/test/: test_async_rpc.cpp  test_thrift_struct.cpp  test_zookeeper.cpp
msgrpc/test/core/adapter/: simple_timer_adapter.h  udp_msg_channel.h
msgrpc/test/details/: msgrpc_test.h  msgrpc_test_loop.h  set_timer_handler.h
msgrpc/test/test_util/: UdpChannel.h
test/: test_async_rpc.cpp  test_async_rpc.cpp.cpp  test_async_rpc_ex.cpp  test_cell_derivation.cpp  test_dummy.cpp  test_thrift_struct.cpp  test_zookeeper.cpp
thrift/: thrift_codec.h  thrift_idl_common.h  thrift_types.h  (+3 more)
(+70 files in other folders)
